# vkQuake

./: .gitignore  CMakeLists.txt
Quake/: gl_vidsdl.c
